<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content" android:layout_height="wrap_content">

	<TextView android:id="@+id/label_number" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/sms_label" />

	<ImageButton android:id="@+id/contacts_button"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_below="@+id/label_number" android:src="@drawable/contacts" />

	<AutoCompleteTextView android:id="@+id/number"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_below="@+id/label_number" android:layout_toRightOf="@+id/contacts_button" />

	<TextView android:id="@+id/label_message"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:text="@string/sms_message" android:layout_below="@id/number" />

	<TextView android:id="@+id/chars_count" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_alignParentRight="true"
		android:layout_below="@id/number" android:text="@string/sms_chars_count" />

	<Button android:id="@+id/btnSend" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_below="@id/label_message"
		android:layout_alignParentRight="true" android:text="@string/sms_btn_send" />

	<EditText android:id="@+id/sms_message" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:minHeight="20pt"
		android:layout_below="@id/label_message" android:layout_toLeftOf="@id/btnSend"
		android:gravity="clip_vertical" android:maxLength="160" />

</RelativeLayout>